force-app/main/default/objects/Distance_Cache__c/Distance_Cache__c.object-meta.xml
<CustomObject>
    <description>Technical object used to store pre-calculated driving distances and durations between two Locations (e.g., Agency and Customer Site). This cache minimizes external routing API calls and prevents hitting governor limits or budget quotas.</description>
    <label>Distance Cache</label>
    <nameField>
        <displayFormat>DC-{0000000}</displayFormat>
        <label>Distance Cache ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distance Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>