force-app/main/default/objects/Distance_Cache__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <description>Composite key used to uniquely identify a route and allow Apex upsert operations. Format: [OriginId]_[DestinationId].</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the route. Used by the system to prevent duplicate API calls.</inlineHelpText>
    <label>Cache Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>