force-app/main/default/objects/Distance_Cache__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the ending point of the route (usually the Customer Site/Chantier).</description>
    <inlineHelpText>The destination Location for the route calculation.</inlineHelpText>
    <label>Destination Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Distance Caches (Destination Location)</relationshipLabel>
    <relationshipName>Distance_Caches1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>