force-app/main/default/objects/Distance_Cache__c/fields/Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Km__c</fullName>
    <description>The driving distance between the origin and destination, converted to kilometers.</description>
    <inlineHelpText>Pre-calculated driving distance in kilometers.</inlineHelpText>
    <label>Distance (Km)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>