force-app/main/default/objects/Distance_Cache__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>The estimated driving time in minutes, taking into account the routing profile (e.g., truck).</description>
    <inlineHelpText>Estimated driving duration in minutes.</inlineHelpText>
    <label>Duration (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>