force-app/main/default/objects/Distance_Cache__c/fields/Last_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Timestamp indicating exactly when the API call was made to calculate this route.</description>
    <inlineHelpText>Date and time when this route was last calculated via API.</inlineHelpText>
    <label>Last Calculated Date</label>
    <type>DateTime</type>
</CustomField>