force-app/main/default/objects/Distance_Cache__c/fields/Origin_Location__c.field-meta.xml
<CustomField>
    <fullName>Origin_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the starting point of the route (usually the Agency).</description>
    <inlineHelpText>The starting Location for the route calculation.</inlineHelpText>
    <label>Origin Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Distance Caches</relationshipLabel>
    <relationshipName>Distance_Caches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>